Fix alignment issue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  align-items: flex-start;
   font-size: 0.8rem;
 }
 
